--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ https://templatemo.com/tm-528-elegance
                 <div class="section-inner">
                     <div class="welcome-box">
                         <span class="welcome-first animate" data-animate="fadeInUp">Hello, welcome to</span>
-                        <h1 class="welcome-title animate" data-animate="fadeInUp">my Github.IO</h1>
+                        <h1 class="welcome-title animate" data-animate="fadeInUp">my Tech Hub</h1>
                         <p class="animate" data-animate="fadeInUp">I am Caetanv, a Dev</p>
                         <div class="scroll-down next-section animate data-animate="fadeInUp""><img src="images/mouse-scroll.png" alt=""><span>Scroll Down</span></div>
                     </div>
@@ -99,8 +99,10 @@ https://templatemo.com/tm-528-elegance
                                         </div>
                                     </div>
                                     <div class="col-md-6">
-                                        <figure class="about-img animate" data-animate="fadeInUp"><img src="images/profile-vitor.png" class="rounded" alt=""></figure>
-                                    </div>
+    <figure class="about-img animate hexagon" data-animate="fadeInUp">
+        <img src="images/vitorcaetanodev.jpg" class="rounded" alt="">
+    </figure>
+</div>
                                 </div>
                             </div>
                         </div>
@@ -193,7 +195,7 @@ https://templatemo.com/tm-528-elegance
                                 <div class="row">
                                     <div class="col-md-8 offset-md-2">   
                                         <div class="skill-item">
-                                            <h6>HTML CSS</h6>
+                                            <h6>HTML CSS JS</h6>
                                             <div class="skill-bar">
                                                 <span>90%</span>
                                                 <div class="filled-bar-2"></div>
@@ -211,6 +213,13 @@ https://templatemo.com/tm-528-elegance
                                             <div class="skill-bar">
                                                 <span>90%</span>
                                                 <div class="filled-bar-2"></div>
+                                            </div>          
+                                        </div>   
+                                        <div class="skill-item">
+                                            <h6>Java</h6>
+                                            <div class="skill-bar">
+                                                <span>70%</span>
+                                                <div class="filled-bar"></div>
                                             </div>          
                                         </div>   
                                         <div class="skill-item">
@@ -252,20 +261,37 @@ https://templatemo.com/tm-528-elegance
                                         </div>
                                     </div>
                                     <div class="col-md-6 animate" data-animate="fadeInUp">
-                                        <form id="ajax-contact" method="post" action="#">
-                                            <div class="input-field">
-                                                <input type="text" class="form-control" name="name" id="name" required placeholder="Name">
-                                            </div>
-                                            <div class="input-field">
-                                                <input type="email" class="form-control" name="email" id="email" required placeholder="Email">
-                                            </div>
-                                            <div class="input-field">
-                                                <textarea class="form-control" name="message" id="message" required placeholder="Message"></textarea>
-                                            </div>
-                                            <button class="btn" type="submit">Submit</button>
-                                        </form>
-                                        <div id="form-messages" class="mt-3"></div>
-                                    </div>
+                                    <form id="contact-form">
+                                        <div class="input-field">
+                                            <input type="text" class="form-control" name="name" id="name" required placeholder="Nome">
+                                        </div>
+                                        <div class="input-field">
+                                            <input type="email" class="form-control" name="email" id="email" required placeholder="Email">
+                                        </div>
+                                        <div class="input-field">
+                                            <textarea class="form-control" name="message" id="message" required placeholder="Mensagem"></textarea>
+                                        </div>
+                                        <button class="btn" type="submit">Enviar</button>
+                                    </form>
+                                    <div id="form-messages" class="mt-3"></div>
+                                </div>
+                                <!-- Script do EmailJS -->
+<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+<script>
+    // Inicializa o EmailJS com sua Public API Key
+    emailjs.init("qr9PkducxVYLSK-A7");
+
+    document.getElementById("contact-form").addEventListener("submit", function(event) {
+        event.preventDefault(); // Impede o envio padrão do formulário
+
+        emailjs.sendForm("service_gs11lpj", "template_9wwgvhs", this)
+        .then(function(response) {
+            document.getElementById("form-messages").innerHTML = "<p style='color:green;'>Mensagem enviada com sucesso!</p>";
+        }, function(error) {
+            document.getElementById("form-messages").innerHTML = "<p style='color:red;'>Erro ao enviar. Tente novamente.</p>";
+        });
+    });
+</script>
                                 </div>
                             </div>
                         </div>
