--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ https://templatemo.com/tm-528-elegance
                                                 <i class="fa fa-phone"></i> 011 96062 1451
                                             </div>
                                             <div class="contact-row">
-                                                <i class="fa fa-envelope"></i> vitor.caetano.silva@usp.br
+                                                <i class="fa fa-envelope"></i> vitorcaetanodev@gmail.com
                                             </div>
                                         </div>
                                     </div>
